--- a/greensource_pages/templates/greensource_pages/testimonial.html
+++ b/greensource_pages/templates/greensource_pages/testimonial.html
@@ -28,7 +28,7 @@
                 <div class="single-testimonial-style-one">
                     <div class="image-block">
                         <div class="inner-block">
-                            <img src="{{ testimonial.image.url }}" alt="Awesome Image" />
+                                <amp-img src="{{ testimonial.image.url }}" alt="Awesome Image" width="100" height="100" layout="responsive"></amp-img>
                         </div>
                         <i class="fas fa-quote-right"></i>
                     </div>
