--- a/static/css/home.css
+++ b/static/css/home.css
@@ -23,294 +23,294 @@ html body:before{
 	z-index:1; 
 }
 html body.offcanvas-menu:before {
-    opacity: 1;
-    z-index: 1002;
-	visibility: visible; 
+    opacity:1;
+    z-index:1002;
+	visibility:visible; 
 }
 /*--------------------------------------------------------------
 # NAVIGATION
 --------------------------------------------------------------*/
 .site-navbar-wrap {
-	position: absolute;
-	z-index: 99;
-	width: 100%;
-	left: 0;
+	position:absolute;
+	z-index:99;
+	width:100%;
+	left:0;
 }
 .site-navbar-wrap a {
-	color: #fff; 
+	color:#fff; 
 }
 .site-navbar-wrap .site-navbar-top {
-	font-size: 13px;
-	padding: 0 20px;
+	font-size:13px;
+	padding:0 20px;
 }
 .site-navbar-wrap .site-navbar-top a:hover{
-	color: #2dc977; 
-	text-decoration: none;
+	color:#2dc977; 
+	text-decoration:none;
 }
 .site-navbar-top {
-	border-bottom: 1.5px solid rgba(255, 255, 255, 0.4); 
+	border-bottom:1.5px solid rgba(255, 255, 255, 0.4); 
 }
 .site-navbar {
-	margin-top: 0;
-	margin-bottom: 0px;
-	width: 100%; 
+	margin-top:0;
+	margin-bottom:0px;
+	width:100%; 
 }
 .site-navbar .site-logo {
-	font-weight: 200;
-	line-height: 0;
-	top: -7px;
-	position: relative; 
+	font-weight:200;
+	line-height:0;
+	top:-7px;
+	position:relative; 
 }
 .site-navbar .site-logo amp-img {
-	margin: 0;
-	padding: 0;
+	margin:0;
+	padding:0;
 }
 .site-navbar .site-navigation .site-menu {
-	margin-bottom: 0; 
+	margin-bottom:0; 
 }
 .site-navbar .site-navigation .site-menu a {
-	text-decoration: none !important;
-	display: inline-block;
-	font-weight: 550;
+	text-decoration:none !important;
+	display:inline-block;
+	font-weight:550;
 }
 .site-navbar .site-navigation .site-menu > li {
-	display: inline-block;
-	padding: 10px 5px;
+	display:inline-block;
+	padding:10px 5px;
 }
 .site-navbar .site-navigation .site-menu > li > a {
-	padding: 20px 10px;
-	color: rgba(225, 225, 225);
-	font-size: 14px;
-	text-decoration: none !important; 
+	padding:20px 10px;
+	color:rgba(225, 225, 225);
+	font-size:14px;
+	text-decoration:none !important; 
 }
 .site-navbar .site-navigation .site-menu > li > a:hover {
-	color: #2dc977;
+	color:#2dc977;
 }
 .sticky-wrapper .site-navbar .site-navigation .site-menu > li.active a {
-	color: #2dc977; 
+	color:#2dc977; 
 }
 .site-navbar .site-navigation .site-menu > li:last-child {
-	padding-right: 0; 
+	padding-right:0; 
 }
 .site-navbar .site-navigation .site-menu > li:last-child > a {
-	padding-right: 0; 
+	padding-right:0; 
 }
 .site-navbar .site-navigation .site-menu .has-children {
-	position: relative; 
+	position:relative; 
 }
 .site-navbar .site-navigation .site-menu .has-children > a {
-	position: relative;
-	padding-right: 20px; 
+	position:relative;
+	padding-right:20px; 
 }
 .site-navbar .site-navigation .site-menu .has-children > a:before:hover {
-	color: #2dc977;
+	color:#2dc977;
 }
 .site-navbar .site-navigation .site-menu .has-children > a:before {
-	position: absolute;
-	content: "\f107";
-	font-size: 18px;
-	top: 50%;
-	right: 0;
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
-	font-family: "icomoon"; 
+	position:absolute;
+	content:"\f107";
+	font-size:18px;
+	top:50%;
+	right:0;
+	-webkit-transform:translateY(-50%);
+	-ms-transform:translateY(-50%);
+	transform:translateY(-50%);
+	font-family:"icomoon"; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown {
-	visibility: hidden;
-	opacity: 0;
-	top: 100%;
-	position: absolute;
-	text-align: left;
-	-webkit-box-shadow: 0 0px 4px 0px rgba(0, 0, 0, 0.25);
-	box-shadow: 0 0px 4px 0px rgba(0, 0, 0, 0.25);
-	padding: 0px 0;
-	margin-top: 20px;
-	margin-left: 0px;
-	background: #fff;
-	-webkit-transition: 0.2s 0s;
-	-o-transition: 0.2s 0s;
-	transition: 0.2s 0s;
-	border-radius: 4px; 
+	visibility:hidden;
+	opacity:0;
+	top:100%;
+	position:absolute;
+	text-align:left;
+	-webkit-box-shadow:0 0px 4px 0px rgba(0, 0, 0, 0.25);
+	box-shadow:0 0px 4px 0px rgba(0, 0, 0, 0.25);
+	padding:0px 0;
+	margin-top:20px;
+	margin-left:0px;
+	background:#fff;
+	-webkit-transition:0.2s 0s;
+	-o-transition:0.2s 0s;
+	transition:0.2s 0s;
+	border-radius:4px; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top {
-	position: absolute; 
+	position:absolute; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top:before {
-	bottom: 100%;
-	left: 20%;
-	border: solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none; 
+	bottom:100%;
+	left:20%;
+	border:solid transparent;
+	content:" ";
+	height:0;
+	width:0;
+	position:absolute;
+	pointer-events:none; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top:before {
-	border-color: rgba(136, 183, 213, 0);
-	border-bottom-color: #fff;
-	border-width: 10px;
-	margin-left: -10px; 
+	border-color:rgba(136, 183, 213, 0);
+	border-bottom-color:#fff;
+	border-width:10px;
+	margin-left:-10px; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown a {
-	font-size: 14px;
-	text-transform: none;
-	letter-spacing: normal;
-	-webkit-transition: 0s all;
-	-o-transition: 0s all;
-	transition: 0s all;
-	color: #343a40; 
+	font-size:14px;
+	text-transform:none;
+	letter-spacing:normal;
+	-webkit-transition:0s all;
+	-o-transition:0s all;
+	transition:0s all;
+	color:#343a40; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-	color: #2dc977 !important; 
+	color:#2dc977 !important; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	min-width: 200px; 
+	list-style:none;
+	padding:0;
+	margin:0;
+	min-width:200px; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li:first-child > a {
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px; 
+	border-top-left-radius:4px;
+	border-top-right-radius:4px; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li:last-child > a {
-	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px; 
+	border-bottom-left-radius:4px;
+	border-bottom-right-radius:4px; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li > a {
-	padding: 9px 20px;
-	display: block; 
+	padding:9px 20px;
+	display:block; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li > a:hover {
-	background: #006420;
-	color: #fff; 
+	background:#006420;
+	color:#fff; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > a:before {
-	content: "\f105";
-	right: 20px; 
+	content:"\f105";
+	right:20px; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > .dropdown, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > ul {
-	left: 100%;
-	top: 0; 
+	left:100%;
+	top:0; 
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:active > a, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children:focus > a {
-	background: #ebeef0;
-	color: #212529; 
+	background:#ebeef0;
+	color:#212529; 
 }
 .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-	color: #fff; 
+	color:#fff; 
 }
 .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
-	cursor: pointer; 
+	cursor:pointer; 
 }
 .site-navbar .site-navigation .site-menu .has-children:hover > .dropdown, .site-navbar .site-navigation .site-menu .has-children:focus > .dropdown, .site-navbar .site-navigation .site-menu .has-children:active > .dropdown {
-	-webkit-transition-delay: 0s;
-	-o-transition-delay: 0s;
-	transition-delay: 0s;
-	margin-top: 0px;
-	visibility: visible;
-	opacity: 1; 
+	-webkit-transition-delay:0s;
+	-o-transition-delay:0s;
+	transition-delay:0s;
+	margin-top:0px;
+	visibility:visible;
+	opacity:1; 
 }
 .site-mobile-menu {
-	width: 300px;
-	position: fixed;
-	right: 0;
-	z-index: 2000;
-	padding-top: 20px;
-	background: rgba(52, 59, 64, 0.9);
-	height: calc(100vh);
-	-webkit-transform: translateX(110%);
-	-ms-transform: translateX(110%);
-	transform: translateX(110%);
-	-webkit-box-shadow: -10px 0 20px -10px rgba(0, 0, 0, 0.1);
-	box-shadow: -10px 0 20px -10px rgba(0, 0, 0, 0.1);
-	-webkit-transition: .3s all ease-in-out;
-	-o-transition: .3s all ease-in-out;
-	transition: .3s all ease-in-out; 
+	width:300px;
+	position:fixed;
+	right:0;
+	z-index:2000;
+	padding-top:20px;
+	background:rgba(52, 59, 64, 0.9);
+	height:calc(100vh);
+	-webkit-transform:translateX(110%);
+	-ms-transform:translateX(110%);
+	transform:translateX(110%);
+	-webkit-box-shadow:-10px 0 20px -10px rgba(0, 0, 0, 0.1);
+	box-shadow:-10px 0 20px -10px rgba(0, 0, 0, 0.1);
+	-webkit-transition:.3s all ease-in-out;
+	-o-transition:.3s all ease-in-out;
+	transition:.3s all ease-in-out; 
 }
 .offcanvas-menu .site-mobile-menu {
-	-webkit-transform: translateX(0%);
-	-ms-transform: translateX(0%);
-	transform: translateX(0%); 
+	-webkit-transform:translateX(0%);
+	-ms-transform:translateX(0%);
+	transform:translateX(0%); 
 }
 .site-mobile-menu .site-mobile-menu-header {
-	width: 100%;
-	float: left;
-	padding-left: 20px;
-	padding-right: 20px; 
+	width:100%;
+	float:left;
+	padding-left:20px;
+	padding-right:20px; 
 }
 .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-close {
-	float: right;
-	margin-top: 8px; 
+	float:right;
+	margin-top:8px; 
 }
 .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-close span {
-	font-size: 30px;
-	display: inline-block;
-	padding-left: 10px;
-	padding-right: 0px;
-	line-height: 1;
-	cursor: pointer;
-	color: #fff;
-	-webkit-transition: .3s all ease;
-	-o-transition: .3s all ease;
-	transition: .3s all ease; 
+	font-size:30px;
+	display:inline-block;
+	padding-left:10px;
+	padding-right:0px;
+	line-height:1;
+	cursor:pointer;
+	color:#fff;
+	-webkit-transition:.3s all ease;
+	-o-transition:.3s all ease;
+	transition:.3s all ease; 
 }
 .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-close span:hover {
-	color: #dee2e6; 
+	color:#dee2e6; 
 }
 .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-logo {
-	float: left;
-	margin-top: 10px;
-	margin-left: 0px; 
+	float:left;
+	margin-top:10px;
+	margin-left:0px; 
 }
 .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-logo a {
-	display: inline-block;
+	display:inline-block;
 }
 .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-logo a amp-img {
-	max-width: 70px; 
+	max-width:70px; 
 }
 .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-logo a:hover {
-	text-decoration: none; 
+	text-decoration:none; 
 }
 .site-mobile-menu .site-mobile-menu-body {
-	overflow-y: scroll;
-	-webkit-overflow-scrolling: touch;
-	position: relative;
-	padding: 20px;
-	height: calc(100vh - 52px);
-	padding-bottom: 150px; 
+	overflow-y:scroll;
+	-webkit-overflow-scrolling:touch;
+	position:relative;
+	padding:20px;
+	height:calc(100vh - 52px);
+	padding-bottom:150px; 
 }
 .site-mobile-menu .site-nav-wrap {
-	padding: 0;
-	margin: 0;
-	list-style: none;
-	position: relative;
+	padding:0;
+	margin:0;
+	list-style:none;
+	position:relative;
 }
 .site-mobile-menu .site-nav-wrap a {
-	padding: 10px 5px;
-	display: block;
-	position: relative;
-	color: #fff; 
+	padding:10px 5px;
+	display:block;
+	position:relative;
+	color:#fff; 
 }
 .site-mobile-menu .site-nav-wrap a.active, .site-mobile-menu .site-nav-wrap a:hover {
-	color: #2dc977; 
-	text-decoration: none; 
+	color:#2dc977; 
+	text-decoration:none; 
 }
 .site-mobile-menu .site-nav-wrap li {
-	position: relative;
-	display: block; 
+	position:relative;
+	display:block; 
 }
 .site-mobile-menu .site-nav-wrap li.active > a {
-	color: #2dc977; 
+	color:#2dc977; 
 }
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
-	position: absolute;
-	right: 0px;
-	top: 10px;
-	z-index: 20;
-	width: 36px;
-	height: 36px;
+	position:absolute;
+	right:0px;
+	top:10px;
+	z-index:20;
+	width:36px;
+	height:36px;
 	text-align: center;
 	cursor: pointer;
 	border-radius: 50%; 
@@ -2291,8 +2291,10 @@ nav .breadcrumb li a:hover{
 	margin-top:20px;
 	width:100%;
 }
-.featured-project amp-img{
+.featured-project img{
 	margin:10px 10px;
+	width:300px;
+	height:300px;
 }
 @media only screen and (max-width: 1199px) {
 	.featured-project amp-img{
@@ -2351,7 +2353,7 @@ nav .breadcrumb li a:hover{
 # PROJECTS
 --------------------------------------------------------------*/  
 .projects{
-	margin-top: 100px;
+	margin-top:100px;
 }
 .portfolio .image-block{
 	margin-top: 20px;
