--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -146,7 +146,7 @@
         </div>
         <div class="working col-xs-12 col-md-6 col-lg-3">
             <span>7</span>
-                <h4>Support and Maintenance</h4>
+                <h4>Support/Maintenance</h4>
                 <p>Even after the installation is complete, our relationship with the customer continues. We offer ongoing support, addressing any inquiries or concerns that may arise. We also provide routine maintenance services to ensure the system operates at its peak performance, maximizing energy generation and savings.</p>
         </div>
         <div class="working col-xs-12 col-md-6 col-lg-3">
