--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -139,8 +139,8 @@
         <div class="container-fluid padding">
             <div class="cta d-block d-md-flex align-items-center px-5">
                 <div>
-                    <h2 class="mb-0">Need a capable hand for your solar solution?</h2>
-                    <h3><strong>We will take care of it !</strong></h3>
+                    <h2 class="mb-0">Need a qualified hand for your solar solutions?</h2>
+                    <h3><strong>We're just a click away!</strong></h3>
                 </div>
                 <div class="ml-auto">
                     <a href="{% url 'contact_us' %}" class="btn btn-dark rounded-0 py-3 px-7">Go Solar Today</a>
