--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -11,12 +11,11 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <amp-img src="{% static 'images/homepage1.webp' %}" alt="off-grid solar panels" wdith="" height="100vh"></amp-img>
+                <img src="{% static 'images/homepage1.webp' %}" alt="off-grid solar panels" />
                 <div class="carousel-caption">
-                    <h1 class="animated zoomIn">Harness the 
+                    <h1 class="animated zoomIn">Harness the
                         <span>sun</span> to work for you</h1>
-                    <p class="animated fadeInUp">Want to reduce your utility bills for home and business? We will Design and Install a Solar Sytem that
-                        achieve this!</p>
+                    <p class="animated fadeInUp">Want to reduce your utility bills for home and business? We will design a reliable system for you!</p>
                     <div class="button animated fadeInDown">
                         <a class="btn" href="{% url 'contact_us' %}" role="button">Go Solar Today!
                             <i class="fas fa-long-arrow-alt-right"></i>
@@ -25,17 +24,48 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/homepage2.webp' %}" alt="array of ground mounted solar panels"/>
+                <img src="{% static 'images/homepage2.webp' %}" alt="array of ground mounted solar panels" />
                 <div class="carousel-caption">
                     <h2 class="animated zoomIn">Power Your Future with
                         <span>Solar </span> Energy Solutions</h2>
-                    <p class="animated fadeInUp">Want to reduce your utility bills for home and business? We will Design and Install a Solar Sytem that
-                        achieve this!</p>
+                    <p class="animated fadeInUp">Want to reduce your utility bills for home and business? We will design a reliable system for you!</p>
                     <div class="button animated fadeInDown">
                         <a class="btn" href="{% url 'contact_us' %}" role="button">Go Solar Today!
                             <i class="fas fa-long-arrow-alt-right"></i>
                         </a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container padding">
+        <div class="row facts padding">
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
+                <div class="inner-box">
+                    <span data-toggle="counter-up">100</span>
+                    <span class="sign">+</span>
+                    <p>Panels Installed</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
+                <div class="inner-box">
+                    <span data-toggle="counter-up">80</span>
+                    <span class="sign">+</span>
+                    <p>Kilowatts Generated</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
+                <div class="inner-box">
+                    <span data-toggle="counter-up">102</span>
+                    <span class="sign">+</span>
+                    <p>Tons of Co2 Reduced</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
+                <div class="inner-box">
+                    <span data-toggle="counter-up">20</span>
+                    <span class="sign">+</span>
+                    <p>Projects Completed</p>
                 </div>
             </div>
         </div>
@@ -90,7 +120,7 @@
                 </div>
                 <h3>Quality and Reliability</h3>
                 <hr />
-                <p>We are committed to using the best equipment. Our installations are built to last, ensuring long-term performance and reliability..</p>
+                <p>We are committed to using the best equipment. Our installations are built to ensure long-term performance and reliability..</p>
             </div>
             <div class="client-portfolio col-lg-3 col-md-6 col-xs-12">
                 <div class="diamond-image">
@@ -104,49 +134,6 @@
                 <p> Our core values revolve around sustainability; reducing carbon emissions, improving air quality & preserving our planet.</p>
             </div>
         </div>
-</section>
-<section>
-    <div class="container-fluid padding">
-        <div class="service-two col-12">
-            <p class="head">
-                <i class="fas fa-long-arrow-alt-right"></i>Our Statistics</p>
-            <p>Our performance in numbers</p>
-        </div>
-        <div class="row facts padding">
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
-                    <div class="inner-box">
-                        <span data-toggle="counter-up">100</span>
-                        <span class="sign">+</span>
-                        <p> Panels
-                            <br /> Installed</p>
-                    </div>
-                </div>  
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
-                    <div class="inner-box">
-                        <span data-toggle="counter-up">80</span>
-                        <span class="sign">+</span>
-                        <p> Kilowatts
-                            <br /> Generated</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
-                    <div class="inner-box">
-                        <span data-toggle="counter-up">102</span>
-                        <span class="sign">+</span>
-                        <p> Tons of Co2 
-                            <br /> Emissions Reduced</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 bubbled-text-block wow fadeIn" data-wow-duration="400">
-                    <div class="inner-box">
-                        <span data-toggle="counter-up">20</span>
-                        <span class="sign">+</span>
-                        <p> Projects
-                            <br /> Completed</p>
-                    </div>
-                </div>
-        </div>
-    </div>
 </section>
 <section>
     <div class="container-fluid padding">
