--- a/static/css/home.css
+++ b/static/css/home.css
@@ -475,7 +475,7 @@ html body.offcanvas-menu:before {
 	background-size: cover;
 	width: 100%;
 	height: 750px;
-	z-index: 1;
+	z-index:1;
 	filter: brightness(0.29);
 }
 .carousel-indicators {
@@ -514,11 +514,6 @@ html body.offcanvas-menu:before {
 	font-weight: 500;
 	width: 70%;
 	animation-delay: 1.5s;
-}
-.carousel-caption .btn i{
-	font-size: 20px;
-	font-weight: bold;
-	padding-left: 10px;
 }
 .carousel-caption .btn {
 	background: #b11c1c;
@@ -637,7 +632,7 @@ html body.offcanvas-menu:before {
 @media only screen and (max-width: 375px) {
 	.carousel-item img{
 		width: 100%;
-		height: 95vh;
+		height: 85vh;
 	}
 	.carousel-inner .carousel-caption h1{
 		margin-top: 25px;
@@ -655,22 +650,24 @@ html body.offcanvas-menu:before {
 		margin-top: 15px;
 	}
 	.carousel-caption .btn{
+		width:65%;
 		font-size: 15px;
-		padding: 15px 12px;
+		padding: 12px 10px;
+		letter-spacing:0px;
 	}
 }
 @media only screen and (max-width: 320px) {
 	.carousel-item img{
-		height: 95vh;
+		height: 75vh;
 		width: 100%;
 	}
 	.carousel-inner .carousel-caption h1{
-		margin-top: 20px;
+		margin-top: 12px;
 		font-size: 16px;
 		width: 100%
 	}
 	.carousel-caption h2{
-		margin-top: 20px;
+		margin-top: 12px;
 		font-size: 16px;
 		width: 115%;
 	}
@@ -681,8 +678,10 @@ html body.offcanvas-menu:before {
 		width: 115%;
 	}
 	.carousel-caption .btn{
+		width:65%;
 		font-size: 15px;
-		padding: 15px 12px;
+		padding: 12px 10px;
+		letter-spacing:0px;
 	}
 }
 /*--------------------------------------------------------------
@@ -848,6 +847,18 @@ nav .breadcrumb li a:hover{
 	margin-left: auto;
 	margin-right: auto;
 }
+@media only screen and (max-width: 575px) {
+	.home-page p{
+		text-align: justify;
+		font-size: 15px;
+	}
+}
+@media only screen and (max-width: 480px) {
+	.home-page p{
+		text-align: justify;
+		font-size: 15px;
+	}
+}
 @media only screen and (max-width: 375px) {
 	.home-page{
 		width: 100%;
@@ -857,6 +868,8 @@ nav .breadcrumb li a:hover{
 	}
 	.home-page p{
 		margin-top: -25px;
+		text-align: justify;
+		font-size: 15px;
 	}
 }
 @media only screen and (max-width: 320px) {
@@ -867,9 +880,10 @@ nav .breadcrumb li a:hover{
 		margin-right: auto;
 	}
 	.home-page p{
-		font-size: 16px;
+		font-size: 15px;
 		margin: 0px;
 		width: 100%;
+		text-align: justify;
 	}
 }
 /*--------------------------------------------------------------
@@ -1883,7 +1897,7 @@ nav .breadcrumb li a:hover{
 		margin-top:15px;
 	}
 	.vision p{
-		width:105%;
+		width:100%;
 	}
 	.vision{
 		width:100%;
@@ -1898,7 +1912,7 @@ nav .breadcrumb li a:hover{
 		margin-top:5px;
 	}
 	.vision p{
-		width:105%;
+		width:100%;
 	}
 	.vision{
 		width:100%;
@@ -2528,7 +2542,7 @@ nav .breadcrumb li a:hover{
 	margin-top: 10px;
 	margin-left: 20px;
 	color: #006420;
-	font-family: 'Big Shoulders Text', cursive;
+	font-family:'Big Shoulders Display', sans-serif;
 }
 .project-info p span{
 	font-size: 17px;
@@ -5946,58 +5960,143 @@ nav .pagination a:hover{
 # EVIDENCE
 --------------------------------------------------------------*/
 .facts{
-	margin-top: 0px;
-	margin-bottom: 50px;
+	margin-top: -60px;
 	text-align: center;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)), url('/static/images/header-img.webp');
-	padding: 120px 0;
-	background-size: cover;
-	background-repeat: no-repeat;
 }
 .facts .bubbled-text-block{
 	text-align:center;
 	display:flex;
-	align-items:center;
 }
 .facts .bubbled-text-block .inner-box{
+	background:#f8f8ff;
+	padding: 20px 20px;
 	display:block;
-	width:100%;
+	width:95%;
+	z-index:2;
+	border-style:groove;
 }
 .facts .bubbled-text-block span{
-  	color:#fff;
-  	font-weight:600;
-	font-size:40px;
-  	text-transform:capitalize;
-  	line-height:1em;
-  	margin-top:25px;
+  	color:#444;
+  	font-weight:560;
+	font-size:25px;
  	font-family:'Big Shoulders Display', cursive;
+}
+.facts .bubbled-text-block .sign{
+	color:#006420;
+	font-weight:bolder;
+	font-size:25px;
+   	font-family:'Big Shoulders Display', cursive;
 }
 .facts .bubbled-text-block p{
   margin-top:10px;
-  color:#fff;
-  font-weight:500;
-  font-size:18px;
+  color:#000;
+  font-size:16px;
   line-height:1.2em;
   text-align:center;
 }
 @media only screen and (max-width: 991px) {
+	.facts{
+		margin-top:30px;
+		padding:0;
+		width:100%;
+	}
 	.facts .bubbled-text-block{
 		padding-bottom: 40px;
 		width: 100%;
 	}
 	.facts .bubbled-text-block span{
 		font-size:30px;
-  }
+  	}
 	.facts .bubbled-text-block p{
 	  font-size:17px;
 	}
 }
 @media only screen and (max-width: 575px) {
+	.facts{
+		margin-top:30px;
+		padding:0;
+		width:106%;
+	}
+	.facts .bubbled-text-block{
+		padding:10px 0;
+		text-align:left;
+	}
+	.facts .bubbled-text-block .inner-box{
+		padding:10px;
+		width:120%;
+	}
+	.facts .bubbled-text-block p{
+	  text-align:left;
+	  font-size:16px;
+	}
 	.facts .bubbled-text-block span{
-	  	font-size:30px;
-    }
-  	.facts .bubbled-text-block p{
-		font-size:16px;
+		font-size:23px;
+  	}
+}
+@media only screen and (max-width: 480px) {
+	.facts{
+		margin-top:30px;
+		padding:0;
+		width:107.5%;
+	}
+	.facts .bubbled-text-block{
+		padding:10px 0;
+		text-align:left;
+	}
+	.facts .bubbled-text-block .inner-box{
+		padding:10px;
+		width:120%;
+	}
+	.facts .bubbled-text-block p{
+	  text-align:left;
+	  font-size:16px;
+	}
+	.facts .bubbled-text-block span{
+		font-size:22px;
+  	}
+}
+@media only screen and (max-width: 375px) {
+	.facts{
+		margin-top:30px;
+		padding:0;
+		width:109%;
+	}
+	.facts .bubbled-text-block{
+		padding:10px 0;
+		text-align:left;
+	}
+	.facts .bubbled-text-block .inner-box{
+		padding:10px;
+		width:120%;
+	}
+	.facts .bubbled-text-block p{
+	  text-align:left;
+	  font-size:15px;
+	}
+	.facts .bubbled-text-block span{
+		font-size:20px;
+  	}
+}
+@media only screen and (max-width: 320px) {
+	.facts{
+		margin-top:30px;
+		padding:0;
+		width:110%;
+	}
+	.facts .bubbled-text-block{
+		padding:10px 0;
+		text-align:left;
+	}
+	.facts .bubbled-text-block .inner-box{
+		padding:10px;
+		width:120%;
+	}
+	.facts .bubbled-text-block p{
+	  text-align:left;
+	  font-size:15px;
+	}
+	.facts .bubbled-text-block span{
+		font-size:20px;
   	}
 }
 /*--------------------------------------------------------------
