--- a/greensource_pages/templates/greensource_pages/project-details.html
+++ b/greensource_pages/templates/greensource_pages/project-details.html
@@ -52,27 +52,27 @@
         <div class="owl-theme owl-carousel" id="project">
             <div class="item">
                 <a href="{{ obj.image1.url }}">
-                    <amp-img src="{{ obj.image1.url }}" alt="img" width="300" height="250" layout="responsive"></amp-img>
+                    <img src="{{ obj.image1.url }}" alt="img" width="300" height="250" layout="responsive"/>
                 </a>
             </div>
             <div class="item">
                 <a href="{{ obj.image2.url }}">
-                    <amp-img src="{{ obj.image2.url }}" alt="img" width="300" height="250" layout="responsive"></amp-img>
+                    <img src="{{ obj.image2.url }}" alt="img" width="300" height="250" layout="responsive"/>
                 </a>
             </div>
             <div class="item">
                 <a href="{{ obj.image3.url }}">
-                    <amp-img src="{{ obj.image3.url }}" alt="img" width="300" height="250" layout="responsive"></amp-img>
+                    <img src="{{ obj.image3.url }}" alt="img" width="300" height="250" layout="responsive"/>
                 </a>
             </div>
             <div class="item">
                 <a href="{{ obj.image4.url }}">
-                    <amp-img src="{{ obj.image4.url }}" alt="img" width="300" height="250" layout="responsive"></amp-img>
+                    <img src="{{ obj.image4.url }}" alt="img" width="300" height="250" layout="responsive"/>
                 </a>
             </div>
             <div class="item">
                 <a href="{{ obj.image5.url }}">
-                    <amp-img src="{{ obj.image5.url }}" alt="img" width="300" height="250" layout="responsive"></amp-img>
+                    <img src="{{ obj.image5.url }}" alt="img" width="300" height="250" layout="responsive"/>
                 </a>
             </div>
         </div>
