--- a/greensource_pages/templates/greensource_pages/projects.html
+++ b/greensource_pages/templates/greensource_pages/projects.html
@@ -28,7 +28,7 @@
         <div class="portfolio col-lg-4 col-md-4 col-sm-6 col-xs-12">
             <a href="{{ solar.get_absolute_url }}">
                 <div class="image-block">
-                    <amp-img src="{{ solar.image.url }}" alt="alt img" width="350" height="350" layout="responsive"></amp-img>
+                    <img src="{{ solar.image.url }}" alt="alt img" />
                     <div class="overlay">
                         <div class="caption">{{ solar.title }}</div>
                     </div>
